[#1180] Fix gap at the top (above search) in small devices

--- a/akvo/rsr/static/rsr/v3/css/src/main.scss
+++ b/akvo/rsr/static/rsr/v3/css/src/main.scss
@@ -20,6 +20,9 @@ body {
     text-rendering: optimizelegibility;
     font-family: $bodyFont;
     padding-top: 80px;
+    @include responsive(small-max-screens) {
+        padding-top: 65px;
+    }
 }
 
 h1,
